--- a/src/user/feedback.html
+++ b/src/user/feedback.html
@@ -8,7 +8,7 @@
                 <div class="panel-body">
                     <form role="form">
                         <div style="margin-bottom:16px;display:flex;justify-content:space-between;">
-                            <div class="input-group">
+                            <!-- <div class="input-group">
                                 <select value.bind="params.device_type" 
                                     style="height:32px;">
                                     <option repeat.for="option of device_type_options" model.bind="option.value">${option.name & t}</option>
@@ -19,7 +19,7 @@
                                     disabled.bind="params.device_type=='any-device'"
                                     style="height:32px;padding-right:5px;padding-left:5px;width:420px;" 
                                     t="[placeholder]feedback.device-details"/>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="form-group">
                             <textarea required name="message" id="message" class="form-control" value.bind="params.feedback_message" rows="6"
