--- a/src/admin/show-feedbacks.html
+++ b/src/admin/show-feedbacks.html
@@ -4,12 +4,12 @@
         <div style="width: 100%;margin-right:auto;margin-left:auto;height:100%;overflow:auto;">
             <table class="table table-striped" aurelia-table="data.bind: items; display-data.bind: $displayData;
                 current-page.bind: currentPage; page-size.bind: pageSize; total-items.bind: totalItems;">
+                <!-- <col style="width:8%">
                 <col style="width:8%">
+                <col style="width:8%"> -->
                 <col style="width:8%">
-                <col style="width:8%">
-                <col style="width:8%">
-                <col style="width:28%">
-                <col style="width:28%">
+                <col style="width:36%">
+                <col style="width:44%">
                 <col style="width:12%">
                 <thead>
                     <tr>
