--- a/src/experiments/experiment.html
+++ b/src/experiments/experiment.html
@@ -32,7 +32,7 @@
         </field-control>
     </div>
 
-    <div>
+    <div style="margin-top:8px;margin-right:200px;margin-left:200px;">
         <input type="text" value.bind="message_content" placeholder="Enter data to be sent" />
         <button class="btn btn-default" click.delegate="tease_server()">Send</button>
         <ul>
