--- a/src/videos/add-video.html
+++ b/src/videos/add-video.html
@@ -1,7 +1,8 @@
 <template>
     <ux-dialog css="direction:${theme.rtltr};width:43em;">
         <ux-dialog-header style="padding-right:32px;">
-            <h4 class="panel-title">${params.id ? 'videos.edit-video-info' & t : 'videos.add-video' & t}</h4>
+            <!-- <h4 class="panel-title">${params.id ? 'videos.edit-video-info' & t : 'videos.add-video' & t}</h4> -->
+            <h4 class="panel-title">${title & t}</h4>
         </ux-dialog-header>
         <ux-dialog-body>
             <div class="panel-body">
