--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -41,11 +41,9 @@
                             <div if.bind="phase=='videos-were-selected' && user.privileges.ADMIN"
                                  class="ctrl">
                                 <button
-                                    class="btn btn-secondary btn-md"
+                                    class="btn btn-default btn-md"
                                     click.trigger="refresh_video_thumbnails()">
-                                    <i class="fas fa-images"></i>
                                     ${'videos.refresh-videos-info' & t}
-                                    Refresh videos info
                                 </button>
                             </div>
                             <div if.bind="phase=='videos-were-selected'" class="ctrl">
