exception in rishpon. strange...

--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -38,7 +38,7 @@
                                     <i class="fas fa-trash-alt"></i>
                                 </button>
                             </div>
-                            <div if.bind="phase=='videos-were-selected' && user.privileges.ADMIN"
+                            <div if.bind="phase=='videos-were-selected' && user.privileges.ADMIN && user.privileges.DEVELOPER"
                                  class="ctrl">
                                 <button
                                     class="btn btn-default btn-md"
