--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -88,7 +88,8 @@
                                         <li>
                                             <a type="button" 
                                                 class="btn btn-default ${disabled_if} ${spouse.together}" repeat.for="spouse of member.family_connections.spouses" 
-                                                route-href="route: member-details; params.bind: {id:spouse.id, keywords: ''}">
+                                                route-href="route: member-details; params.bind: {id:spouse.id, keywords: ''}"
+                                                contextmenu.delegate="divorce(spouse.id)">
                                                 <img src.bind="get_profile_photo(spouse)" />
                                                 <span>
                                                     ${spouse.name}
