--- a/src/app.html
+++ b/src/app.html
@@ -55,7 +55,7 @@
                 <span style="padding-left:15px;padding-right:15px">${theme.page_title & t}</span>
             </div>
         </div>
-        <div id="router-view" css="min-height:${router_view_height};overflow-x:hidden;" class="unselectable">
+        <div id="router-view" css="min-height:${router_view_height};overflow-x:hidden;" class="unselectablexxx">
             <router-view ref="theme.router_view"></router-view>
         </div>
         <footer id="footer" if.bind="! theme.hide_title" ref="theme.footer">
