--- a/src/members/divorce.html
+++ b/src/members/divorce.html
@@ -6,8 +6,8 @@
         <ux-dialog-body>
         </ux-dialog-body>
         <ux-dialog-footer>   
-            <button click.delegate="do_divorce(false)">${'members.divorced' & t}</button>
-            <button click.delegate="do_divorce(true)">${'members.divorced-hidden' & t}</button>
+            <button click.delegate="do_divorce(1)">${'members.divorced' & t}</button>
+            <button click.delegate="do_divorce(2)">${'members.divorced-hidden' & t}</button>
             <button click.delegate="cancel()">${'members.mistake' & t}</button>
         </ux-dialog-footer>
     </ux-dialog>
